<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="253dp"
        android:layout_height="251dp"
        android:layout_marginTop="@dimen/margen"
        android:src="@drawable/animenic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margentop"
        android:text="@string/loginTitle"
        android:textColor="@color/primaryDarkColor"
        android:textSize="@dimen/tamtexto2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margentop"
        android:layout_marginHorizontal="@dimen/margenizq"
        android:hint="@string/tilUser"
        app:helperText="@string/helper_text_require"
        app:counterMaxLength="@integer/text_max_lenght"
        app:counterEnabled="true"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_creador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margentop"
        android:layout_marginHorizontal="@dimen/margenizq"
        android:hint="@string/tilPass"
        app:helperText="@string/helper_text_require"
        app:counterMaxLength="@integer/text_max_lenght_pass"
        app:counterEnabled="true"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilUsername"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:backgroundTint="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margentop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:gravity="center">

        <TextView
            android:id="@+id/tvNoTienecuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondaryColor"
            android:text="@string/strNoTieneCuenta"/>

        <TextView
            android:id="@+id/tvCrearcuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/secondaryDarkColor"
            android:layout_toRightOf="@id/tvNoTienecuenta"
            android:layout_marginLeft="@dimen/margenizq"
            android:text="@string/strCreaUna"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>