<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CrearCuentaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/NoActionBar"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolCrearCuenta"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imgAppbar"
                android:padding="@dimen/margen"
                android:src="@drawable/animenic" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/abar"
        android:layout_marginTop="@dimen/margentop"
        android:layout_marginHorizontal="@dimen/margentop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilEmail"
                app:counterMaxLength="@integer/text_max_lenght_email"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_creador"
                app:helperText="@string/helper_text_require">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilName"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_creador"
                app:helperText="@string/helper_text_require">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margentop"
                android:hint="@string/tilPass"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/text_max_lenght_pass"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_lock"
                app:helperText="@string/helper_text_require">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margentop"
                android:hint="@string/tilConfirmPass"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/text_max_lenght_pass"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_lock"
                app:helperText="@string/helper_text_require">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCrearCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margentop"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/strCrearCuenta"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>