<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DetailCreatorFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarcol"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto1"
        android:theme="@style/NoActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/idToolColapse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/primaryColor">

            <ImageView
                android:id="@+id/imgDetalleCreador"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/creador_jojo"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/creador_detail_fragment_img" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/ToolDetailCreador"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margentop1"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:layout_collapseMode="pin">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/director_name"
                android:textSize="@dimen/tamtexto1"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgDetalleCreador"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="NotSibling" />
            <TextView
                android:id="@+id/tvFechaNac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_Nac"
                android:textSize="@dimen/tamtexto2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNombre"
                />
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/alto3"
                android:background="@color/primaryColor"
                app:layout_constraintTop_toBottomOf="@id/tvFechaNac"/>
            <TextView
                android:id="@+id/tvTitleObrasRealizadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"
                android:paddingTop="@dimen/margen"
                android:paddingHorizontal="@dimen/margen1"
                android:text="@string/strObrasRealizadas"
                />
            <TextView
                android:id="@+id/tvObrasRealizadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvTitleObrasRealizadas"
                app:layout_constraintTop_toBottomOf="@id/view"
                android:paddingTop="@dimen/margen"
                android:paddingHorizontal="@dimen/margen1"/>
            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/alto6"
                android:background="@color/primaryColor"
                app:layout_constraintTop_toBottomOf="@id/tvTitleObrasRealizadas"/>
            <TextView
                android:id="@+id/tvTitle_biografia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biografia_title_detail"
                android:textSize="@dimen/tamtexto1"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1"
                />
            <TextView
                android:id="@+id/tvBiografia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/description_creador_detail"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/margen"
                android:paddingHorizontal="@dimen/margen1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle_biografia"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>